[package]
name = "vdf-doodles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { verison = "1.0.1", features = ["rand_core"] }
rand_core = { verion = "0.6.4", default-features = false, features = [
    "getrandom",
] }
rand = { version = "0.7.0", features = ["std"] }
# rand = { version = "0.8.5", features = ["std", "getrandom"] }
vdf = "0.1.0"
blake3 = "1.4.0"
